--- a/views/trips/detail.hbs
+++ b/views/trips/detail.hbs
@@ -1,33 +1,206 @@
-<h1>Detail of trip</h1>
 
-
-<div class="card border-0" style="width: 100%;">
-  <ul class="list-group list-group-flush">
-    <img class="rounded-circle mt-1" src="{{trip.user.image}}" alt="user" width="28px" height="28px">
-    <li class="list-group-item border-0">{{trip.from}}</li>
-    <li class="list-group-item">{{trip.to}}</li>
-    <li class="list-group-item">{{trip.departureTime}}</li>
-    <li class="list-group-item border-bottom border-top border-5">Price: {{trip.price}}€</li>
-    <li class="list-group-item border-0" style="width: 80%;">{{trip.user.user}}</li>
-    <li class="list-group-item">Escribir a {{trip.user.user}}</li>
-    <li class="list-group-item">Date {{formatDate trip.date}}</li>
-    <li class="list-group-item border-0">Seats: {{trip.seats}}</li>
-    <li class="list-group-item border-bottom border-2">Car</li>
-    <li class="list-group-item">Continuar</li>
-  </ul>
+<div class="row mx-auto justify-content-center pt-25 pt-3" style="width: 100%;">
+  <div class="col-12 col-md-4 row justify-content-center">
+    <h1 class="sc-gswNZR sc-jIRcFI sc-hhOBVt kQcYu kHCrWL dUxoqJ ms-4">{{formatDate trip.date}}<br>
+      </h1>
+  </div>
 </div>
 
 
-{{#isOwnedBy trip currentUser}}
-<a class="btn btn-primary" href="{{../trip.id}}/edit">Edit</a>
+<div class="border-bottom border-5">
+  <div class="ms-5 my-3 d-flex flex-row">
+    <div>
+      <h6 class="mb-1 text-muted fw-bold fs-5">{{trip.departureTime}}</h6>
+      <p class="mb-1 text-muted fs-6">7h</p> {{!-- ¡¡¡ We must include the parameter !!! --}}
+      <h6 class="mb-1 text-muted fw-bold fs-5">{{arriveHour trip.departureTime}}</h6> {{!-- ¡¡¡ We must include the parameter !!!
+      --}}
+    </div>
+    {{!-- Trip bar picture --}}
+    <div class="travel-icon mt-1 ms-2 me-2">
+      <div class="travel-icon-circle"></div>
+      <div class="travel-icon-line"></div>
+      <div class="travel-icon-circle"></div>
+    </div>
+    {{!-- From to information --}}
+    <div>
+      <h6 class=" text-muted">{{trip.from}}</h6>
+      <div class="mb-1">
+        <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl hgvhyy" width="20px"
+          height="20px" aria-hidden="false">
+          <title>Muy cerca de ti</title>
+          <path fill="#5DD167"
+            d="M10 20C4.477 20 0 15.523 0 10S4.477 0 10 0s10 4.477 10 10-4.477 10-10 10zm1.202-14.863a1.568 1.568 0 1 0 0-3.136 1.568 1.568 0 0 0 0 3.136zm.94 1.868h-.005a1.568 1.568 0 0 0-1.563-1.554h-.007c-2.252 0-3.896 1.32-4.288 2.692L5.5 11.051H6.926l.723-2.72 1.166-.825-.874 3.264L6.003 18h1.569l1.83-5.661 1.526 1.269.314 4.392h1.528v-5.02l-1.757-1.756.473-1.767a3.753 3.753 0 0 0 2.853 1.313h.314V9.515a2.51 2.51 0 0 1-2.51-2.51z">
+          </path>
+        </svg>
+      </div>
 
-<form action="/trips/{{../trip.id}}/delete" method="POST">
-  <button class="btn btn-danger" type="submit">Delete</button>
-</form>
+
+      <h6 class="card-subtitle text-muted mt-2">{{trip.to}}</h6>
+      <div class="mb-1">
+        <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl hgvhyy" width="20px"
+          height="20px" aria-hidden="false">
+          <title>Muy cerca de ti</title>
+          <path fill="#5DD167"
+            d="M10 20C4.477 20 0 15.523 0 10S4.477 0 10 0s10 4.477 10 10-4.477 10-10 10zm1.202-14.863a1.568 1.568 0 1 0 0-3.136 1.568 1.568 0 0 0 0 3.136zm.94 1.868h-.005a1.568 1.568 0 0 0-1.563-1.554h-.007c-2.252 0-3.896 1.32-4.288 2.692L5.5 11.051H6.926l.723-2.72 1.166-.825-.874 3.264L6.003 18h1.569l1.83-5.661 1.526 1.269.314 4.392h1.528v-5.02l-1.757-1.756.473-1.767a3.753 3.753 0 0 0 2.853 1.313h.314V9.515a2.51 2.51 0 0 1-2.51-2.51z">
+          </path>
+        </svg>
+      </div>
+    </div>
+      <div class="d-flex flex-column ms-auto me-3">
+        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ktwOSD kPQuM sc-dmXXqC ukyFr" width="24" height="24" aria-hidden="true"><polyline fill="none" stroke="#708C91" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" points="9 18 15 12 9 6"></polyline></svg>
+        <svg class="mt-4" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ktwOSD kPQuM sc-dmXXqC ukyFr" width="24" height="24" aria-hidden="true"><polyline fill="none" stroke="#708C91" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" points="9 18 15 12 9 6"></polyline></svg>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="border-bottom border-5 my-3 d-flex justify-content-between">
+  <h5 class="ms-3">Total price for 1 passenger</h5>
+  <h2 class="me-5">{{trip.price}}€</h2>
+</div>
+<div class="d-flex flex-row my-4 ms-4">
+  <div>
+    <h5>{{trip.user.name}}</h5>
+    <div class="d-flex flex-directon-row">
+      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl Jvfzv" width="16"
+        height="16" aria-hidden="true">
+        <path fill-rule="evenodd" clip-rule="evenodd"
+          d="M8.61622 8.08952L2.6818 9.00945C2.02966 9.11055 1.76941 9.9493 2.24025 10.4325L6.52493 14.8294L5.5266 21.0238C5.41689 21.7045 6.09825 22.2229 6.68258 21.9032L12 18.9948L17.3174 21.9032C17.9018 22.2229 18.5831 21.7045 18.4734 21.0238L17.4751 14.8294L21.7597 10.4325C22.2306 9.9493 21.9703 9.11055 21.3182 9.00945L15.3838 8.08952L12.7144 2.46367C12.4211 1.84544 11.5789 1.84544 11.2856 2.46367L8.61622 8.08952Z"
+          fill="#708C91"></path>
+      </svg>
+      {{#if trip.user.receivedRatings}}
+      <h6>{{ratingAverage trip.user.receivedRatings}}</h6>
+      {{else}}
+      <small class="fst-italic">Not ratings yet</small>
+      {{/if}}
+    </div>
+  </div>
+  <img class="rounded-circle ms-5" width="48px" height="48px"
+    src="{{#if trip.user.image}} {{trip.user.image}} {{else}}https://cdn.blablacar.com/kairos/assets/images/default-m-818bf2b20d4b06a052dd..svg{{/if}}"
+    alt="{{trip.user.name}} image">
+  <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="ms-auto mt-2 me-3 kirk-icon sc-ktwOSD kPQuM sc-dmXXqC ukyFr" width="24" height="24" aria-hidden="true"><polyline fill="none" stroke="#708C91" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" points="9 18 15 12 9 6"></polyline></svg>
+
+
+</div>
+
+
+
+{{#isOwnedBy trip currentUser}}
+<div class="d-flex flex-row justify-content-evenly border-bottom">
+  <div><button class="mb-3 px-5 btn btn-primary rounded-pill text-white border-0 fw-normal" href="{{../trip.id}}/edit">Edit</button></div>
+  <div>
+    <form action="/trips/{{../trip.id}}/delete" method="POST">
+      <button class="px-5 btn btn-danger rounded-pill text-white border-0 fw-normal" type="submit">Delete</button>
+    </form>
+  </div>
+</div>
+{{else}}
+
+<div class="fixed-bottom d-flex justify-content-center bg-white border-top p-2">
+  <a class="my-1 w-50 publish btn btn-primary rounded-pill text-white border-0 fw-normal"
+    href="/trips/{{trip.id}}/book">Continue
+  </a>
+</div>
+
+<div class="mx-4 d-flex chat-link-detail border-bottom mt-5">
+  <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ktwOSD koflcE" width="24" height="24" aria-hidden="true"><path d="M21.951,10.281C21.98,10.023,22,9.764,22,9.5C22,4.813,17.29,1,11.5,1C5.71,1,1,4.813,1,9.5c0,1.801,0.691,3.52,2,4.979 V19.5c0,0.173,0.09,0.334,0.237,0.426C3.317,19.975,3.409,20,3.5,20c0.077,0,0.153-0.018,0.224-0.053l4.431-2.215 C9.667,19.752,12.424,21,15.5,21c0.547,0,1.097-0.042,1.636-0.123l4.141,2.07C21.347,22.982,21.424,23,21.5,23 c0.092,0,0.183-0.025,0.263-0.074C21.91,22.834,22,22.673,22,22.5v-3.814c1.292-1.173,2-2.651,2-4.186 C24,12.946,23.27,11.461,21.951,10.281z M3.865,13.943C2.645,12.641,2,11.104,2,9.5C2,5.364,6.262,2,11.5,2S21,5.364,21,9.5 S16.738,17,11.5,17c-1.023,0-2.045-0.135-3.038-0.399c-0.118-0.029-0.244-0.019-0.353,0.036L4,18.691v-4.406 C4,14.158,3.952,14.036,3.865,13.943z M21.176,18.079C21.064,18.175,21,18.313,21,18.46v3.23l-3.561-1.78 c-0.094-0.048-0.203-0.064-0.307-0.046C16.597,19.954,16.047,20,15.5,20c-2.334,0-4.511-0.826-5.917-2.162 C10.219,17.935,10.858,18,11.5,18c4.962,0,9.12-2.804,10.212-6.554C22.543,12.351,23,13.411,23,14.5 C23,15.805,22.353,17.076,21.176,18.079z"></path></svg>
+  <a class="ms-3 chat-link-detail-text mb-4 border-0 fw-normal"
+    href="/users/{{trip.user.id}}/chat"><h5>Chat with {{../trip.user.name}}</h5></a>
+</div>
+
 {{/isOwnedBy}}
 
-<a class="publish btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal"
-  href="/trips/{{trip.id}}/book">Continue</a>
 
-<a class="publish btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal"
-  href="/users/{{trip.user.id}}/chat">Chat</a>
+
+
+<div class="verify my-4 border-bottom d-flex align-items-start flex-column ms-4">
+<div class="mb-4 d-flex align-items-start">
+  <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl Jvfzv" width="24" height="24"
+    aria-hidden="true">
+    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+      <path stroke="#708C91" stroke-linecap="round" stroke-linejoin="round"
+        d="M20.7818182,17.4727273 C22.4545455,15.8 23.5,13.7090909 23.5,11.4090909 C23.5,6.18181818 18.3772727,2 12,2 C5.62272727,2 0.5,6.18181818 0.5,11.4090909 C0.5,16.6363636 5.62272727,20.8181818 12,20.8181818 C13.15,20.8181818 14.1954545,20.7136364 15.2409091,20.4 L21.4090909,22.9090909 L20.7818182,17.4727273 Z">
+      </path>
+      <path fill="#708C91"
+        d="M10.371,8.774 C10.869,8.852 11.223,9.176 11.223,9.812 C11.223,10.634 10.593,11 9.867,11 L8.091,11 L8.091,6.8 L9.753,6.8 C10.491,6.8 11.013,7.16 11.013,7.856 C11.013,8.306 10.791,8.63 10.371,8.762 L10.371,8.774 Z M9.633,7.508 L8.859,7.508 L8.859,8.516 L9.603,8.516 C9.993,8.516 10.209,8.33 10.209,8.006 C10.209,7.676 9.975,7.508 9.633,7.508 Z M9.735,10.292 C10.155,10.292 10.407,10.082 10.407,9.734 C10.407,9.386 10.167,9.176 9.705,9.176 L8.859,9.176 L8.859,10.292 L9.735,10.292 Z M12.495,6.8 L11.757,6.8 L11.757,11 L12.495,11 L12.495,6.8 Z M14.325,11.09 C13.599,11.09 12.993,10.562 12.993,9.614 C12.993,8.666 13.599,8.138 14.325,8.138 C14.775,8.138 15.075,8.33 15.249,8.618 L15.261,8.618 L15.261,8.228 L15.993,8.228 L15.993,11 L15.261,11 L15.261,10.61 L15.249,10.61 C15.075,10.898 14.775,11.09 14.325,11.09 Z M14.511,10.394 C14.955,10.394 15.261,10.082 15.261,9.614 C15.261,9.146 14.955,8.834 14.511,8.834 C14.067,8.834 13.761,9.146 13.761,9.614 C13.761,10.082 14.067,10.394 14.511,10.394 Z">
+      </path>
+      <path fill="#708C91"
+        d="M10.371,14.0739992 C10.869,14.1519992 11.223,14.4759992 11.223,15.1119992 C11.223,15.9339992 10.593,16.2999992 9.867,16.2999992 L8.091,16.2999992 L8.091,12.0999992 L9.753,12.0999992 C10.491,12.0999992 11.013,12.4599992 11.013,13.1559992 C11.013,13.6059992 10.791,13.9299992 10.371,14.0619992 L10.371,14.0739992 Z M9.633,12.8079992 L8.859,12.8079992 L8.859,13.8159992 L9.603,13.8159992 C9.993,13.8159992 10.209,13.6299992 10.209,13.3059992 C10.209,12.9759992 9.975,12.8079992 9.633,12.8079992 Z M9.735,15.5919992 C10.155,15.5919992 10.407,15.3819992 10.407,15.0339992 C10.407,14.6859992 10.167,14.4759992 9.705,14.4759992 L8.859,14.4759992 L8.859,15.5919992 L9.735,15.5919992 Z M12.495,12.0999992 L11.757,12.0999992 L11.757,16.2999992 L12.495,16.2999992 L12.495,12.0999992 Z M14.325,16.3899992 C13.599,16.3899992 12.993,15.8619992 12.993,14.9139992 C12.993,13.9659992 13.599,13.4379992 14.325,13.4379992 C14.775,13.4379992 15.075,13.6299992 15.249,13.9179992 L15.261,13.9179992 L15.261,13.5279992 L15.993,13.5279992 L15.993,16.2999992 L15.261,16.2999992 L15.261,15.9099992 L15.249,15.9099992 C15.075,16.1979992 14.775,16.3899992 14.325,16.3899992 Z M14.511,15.6939992 C14.955,15.6939992 15.261,15.3819992 15.261,14.9139992 C15.261,14.4459992 14.955,14.1339992 14.511,14.1339992 C14.067,14.1339992 13.761,14.4459992 13.761,14.9139992 C13.761,15.3819992 14.067,15.6939992 14.511,15.6939992 Z">
+      </path>
+      <g transform="translate(-60.000000, -20.000000)"></g>
+    </g>
+  </svg>
+  <p class="text-secondary ms-3">I’m chatty when I feel comfortable</p>
+</div>
+<div class="mb-4 d-flex align-items-start">
+  <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon" width="24" height="24"
+    aria-hidden="true">
+    <path
+      d="M23.5,1h-15C8.224,1,8,1.224,8,1.5v15.882C7.266,16.542,6.2,16,5,16c-2.206,0-4,1.794-4,4s1.794,4,4,4s4-1.794,4-4V8h14v7.382C22.267,14.542,21.2,14,20,14c-2.206,0-4,1.794-4,4s1.794,4,4,4s4-1.794,4-4V1.5C24,1.224,23.776,1,23.5,1zM5,23c-1.654,0-3-1.346-3-3s1.346-3,3-3s3,1.346,3,3S6.654,23,5,23z M20,21c-1.654,0-3-1.346-3-3s1.346-3,3-3s3,1.346,3,3S21.654,21,20,21z M9,7V2h14v5H9z">
+    </path>
+  </svg>
+  <p class="text-secondary ms-3">It’s all about the playlist!</p>
+</div>
+<div class="mb-4 d-flex align-items-start">
+  <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon" width="24" height="24"
+    aria-hidden="true">
+    <g>
+      <path
+        d="M22.558,17.817L8.371,9.626C7.908,9.359,7.27,9.532,7.004,9.992l-1.518,2.629c-0.275,0.477-0.111,1.09,0.366,1.366l14.188,8.191c0.151,0.087,0.324,0.133,0.498,0.133c0.356,0,0.688-0.19,0.867-0.499l1.518-2.629C23.198,18.706,23.035,18.094,22.558,17.817z M20.54,21.312C20.54,21.312,20.539,21.312,20.54,21.312l-14.188-8.19l1.518-2.629l14.187,8.191L20.54,21.312z">
+      </path>
+      <path
+        d="M4.237,5.03C4.471,5.175,4.78,5.103,4.925,4.868l1.14-1.843c1.002-1.619,3.079-2.142,4.727-1.19l5.47,3.158c0.693,0.4,1.463,0.605,2.242,0.605c0.391,0,0.784-0.052,1.172-0.155c1.161-0.312,2.132-1.056,2.731-2.097l0.234-0.406c0.139-0.239,0.057-0.545-0.183-0.683c-0.238-0.136-0.545-0.057-0.683,0.183l-0.235,0.406c-0.467,0.81-1.221,1.389-2.124,1.63c-0.904,0.243-1.846,0.118-2.655-0.35l-5.47-3.158c-2.121-1.225-4.79-0.552-6.078,1.53l-1.14,1.843C3.93,4.576,4.002,4.884,4.237,5.03z">
+      </path>
+      <path
+        d="M10.52,3.568C9.325,2.878,7.794,3.289,7.105,4.483L6.611,5.338C6.473,5.577,6.555,5.883,6.794,6.021c0.237,0.138,0.544,0.056,0.683-0.183l0.494-0.854c0.2-0.347,0.524-0.595,0.911-0.699c0.388-0.104,0.791-0.05,1.138,0.15l5.152,2.975c0.079,0.045,0.165,0.067,0.25,0.067c0.172,0,0.341-0.089,0.433-0.25c0.139-0.239,0.057-0.545-0.183-0.683L10.52,3.568z">
+      </path>
+      <path
+        d="M3.183,6.727C2.944,6.588,2.638,6.67,2.5,6.91l-2,3.464c-0.138,0.239-0.056,0.545,0.183,0.683c0.079,0.045,0.165,0.067,0.25,0.067c0.173,0,0.341-0.089,0.434-0.25l2-3.464C3.504,7.171,3.422,6.865,3.183,6.727z">
+      </path>
+      <path
+        d="M5.183,8.067C4.944,7.929,4.638,8.01,4.5,8.25l-2,3.464c-0.138,0.239-0.056,0.545,0.183,0.683c0.079,0.046,0.165,0.067,0.25,0.067c0.173,0,0.341-0.09,0.434-0.25l2-3.464C5.504,8.511,5.422,8.205,5.183,8.067z">
+      </path>
+    </g>
+    <g fill-rule="nonzero" stroke-linecap="round" stroke-linejoin="round">
+      <path stroke="#FFF" d="M1,24.5 L23.5,2"></path>
+      <path stroke="#F53F5B" d="M1,23.5 L23.5,1"></path>
+    </g>
+  </svg>
+  <p class="text-secondary ms-3">Please, no smoking in the car</p>
+</div>
+<div class="mb-4 d-flex align-items-start">
+  <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon" width="24" height="24"
+    aria-hidden="true">
+    <path
+      d="M7.036 7.486L6.541 5.82a2.24 2.24 0 114.292-1.276l.496 1.667a2.24 2.24 0 01-4.293 1.276zm3.334-.991l-.495-1.667a1.24 1.24 0 10-2.376.706l.496 1.667a1.24 1.24 0 002.375-.706zm5.635.706l.496-1.667a1.24 1.24 0 10-2.376-.706l-.495 1.667a1.24 1.24 0 002.375.706zm-3.334-.991l.496-1.667a2.24 2.24 0 114.292 1.276l-.495 1.667A2.24 2.24 0 0112.67 6.21zm-9.833 6.26l-.366-.428a2.24 2.24 0 013.404-2.91l.366.43a2.24 2.24 0 01-3.404 2.909zm2.644-2.259l-.366-.428a1.24 1.24 0 00-1.884 1.61l.366.428a1.24 1.24 0 101.884-1.61zm14.92 1.61l.366-.429a1.24 1.24 0 00-1.884-1.61l-.366.43a1.24 1.24 0 001.884 1.609zm-2.644-2.26l.366-.428a2.24 2.24 0 013.404 2.909l-.366.429a2.24 2.24 0 01-3.404-2.91zm-9.915 3.992l.02-.03c1.993-2.813 6.28-2.813 8.294.03l1.725 2.846c1.689 2.787-1.191 6.058-4.284 4.91l-.15-.056a4.172 4.172 0 00-2.896 0l-.15.056c-3.093 1.148-5.973-2.123-4.284-4.91l1.725-2.846zm-.87 3.364c-1.186 1.959.857 4.28 3.081 3.454l.15-.055a5.172 5.172 0 013.592 0l.15.055c2.224.826 4.267-1.495 3.08-3.454L15.323 14.1c-1.592-2.246-5.034-2.25-6.634-.014l-1.715 2.83z">
+    </path>
+    <g fill-rule="nonzero" stroke-linecap="round" stroke-linejoin="round">
+      <path stroke="#FFF" d="M1,24.5 L23.5,2"></path>
+      <path stroke="#F53F5B" d="M1,23.5 L23.5,1"></path>
+    </g>
+  </svg>
+  <p class="text-secondary ms-3">Sorry, not a pet person</p>
+</div>
+<div class="anchors d-flex align-items-start flex-column ms-1">
+  <div class="mb-4">
+    <a class="signUp text-decoration-none disabled" href="#">Edit travel preferences</a>
+  </div>
+</div>
+</div>
+
+<div class="mb-1 d-flex align-items-center flex-column">
+<div class="d-flex justify-content-between mb-2" style="width: 85%;">
+  <div>
+    <h3 class="pl-30 fw-bold mt-4">Vehicles</h3>
+  </div>
+</div>
+</div>
+
+<div class="verify mb-3 d-flex align-items-start flex-column ms-4">
+<div class="d-flex align-items-start">
+  <h4 class="ms-3">Opel Astra</h4>
+</div>
+<div class="mb-4 d-flex align-items-start mb-5">
+  <p class="text-secondary ms-3">White</p>
+</div>
+</div>
+</div>
