--- a/views/trips/list.hbs
+++ b/views/trips/list.hbs
@@ -17,8 +17,8 @@
           <div class="d-flex flex-row">
             <div>
               <h6 class="card-subtitle mb-2 text-muted fw-bold fs-5">{{trip.departureTime}}</h6>
-              <p class="card-subtitle mb-2 text-muted fs-6">6h50</p> {{!-- ¡¡¡ We must include the parameter !!! --}}
-              <h6 class="card-subtitle mb-2 text-muted fw-bold fs-5">06:00</h6> {{!-- ¡¡¡ We must include the parameter
+              <p class="card-subtitle mb-2 text-muted fs-6">7h</p> {{!-- ¡¡¡ We must include the parameter !!! --}}
+              <h6 class="card-subtitle mb-2 text-muted fw-bold fs-5">{{arriveHour trip.departureTime}}</h6> {{!-- ¡¡¡ We must include the parameter
               !!!
               --}}
             </div>
