--- a/views/trips/all.hbs
+++ b/views/trips/all.hbs
@@ -7,8 +7,8 @@
       <div class="d-flex flex-row">
         <div>
           <h6 class="card-subtitle mb-2 text-muted fw-bold fs-5">{{trip.departureTime}}</h6>
-          <p class="card-subtitle mb-2 text-muted fs-6"></p> {{!-- ¡¡¡ We must include the parameter !!! --}}
-          <h6 class="card-subtitle mb-2 text-muted fw-bold fs-5"></h6> {{!-- ¡¡¡ We must include the parameter !!! --}}
+          <p class="card-subtitle mb-2 text-muted fs-6 ms-4">7h</p> {{!-- ¡¡¡ We must include the parameter !!! --}}
+          <h6 class="card-subtitle mb-2 text-muted fw-bold fs-5">{{arriveHour trip.departureTime}}</h6> {{!-- ¡¡¡ We must include the parameter !!! --}}
         </div>
         {{!-- Trip bar picture --}}
         <div class="travel-icon ms-2 me-2">
