Home explain reserved rights & owners. Fly deploy

--- a/views/commons/home.hbs
+++ b/views/commons/home.hbs
@@ -195,8 +195,13 @@
   </div>
 </div>
 
+<p class="text-center m-3"> Created by <a href="https://www.linkedin.com/in/victorlpz23">Víctor López</a> & <a href="https://www.linkedin.com/in/alex-garrido-baldrich-07b29aa9/">Alex Garrido</a></p>
+
+<p class="text-center m-3">*This website is solely created for educational purposes and to demonstrate the skills of its creators. We do not claim ownership or rights to the content and design of the original BlaBlaCar website, which are the property of their respective owners. This project is not intended for commercial use, and we respect the intellectual property rights of BlaBlaCar and other third-party materials used in this project.</p>
+
 <footer class="d-flex justify-content-start ms-3 mt-4 mb-3">
     <img src="https://cdn.blablacar.com/kairos/assets/images/logo_blablacar_whitebg_01-83b62417b8605e424242..svg" alt="BlaBlaCar, 2023 ©" height="27px" width="32px" loading="eager" decoding="async">
     <p class="text-secondary ms-3">BlaBlaCar, 2023 ©</p>
 </footer>
+
 
